# wrap

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Doxyfile  INSTALL.md  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  alias.h  bootstrap  c_compat.h  common.c  common.h  config.h  configure  configure.ac  devclean  getopt.h  makedoc.sh  version.h  wrap.1  wrap.c  wrap.css  wrapc.1  wrapc.c
lib/: .gitignore  Makefile.am  c++defs.h  cdefs.h  fnmatch.c  fnmatch_loop.c  getopt.c  intprops.h  inttypes.h  libc-config.h  malloc.c  stdnoreturn.in.h  string.in.h  wchar.in.h  wctype.in.h
m4/: gnulib-cache.m4  gnulib-comp.m4  pjl_check_compile_flag.m4  pjl_check_typedef.m4
man/: Makefile.am  Makefile.in
man/man1/: Makefile.am  Makefile.in  wrap.1  wrapc.1
man/man5/: Makefile.am  Makefile.in  wraprc.5
src/: .gitignore  Makefile  Makefile.am  Makefile.in  alias.c  alias.h  align.c  cc_map.c  cc_map.h  common.c  common.h  config.c  config.h.in  config_file.c  doxygen.c  doxygen.h  getopt.c  getopt.h  markdown.c  markdown.h  options.c  options.h  pattern.c  pattern.h  pjl_config.h  read_conf.c  read_conf.h  regex_test.c  type_traits.h  unicode.c  unicode.h  util.c  util.h  wrap.c  wrap.h  wrap_term.c  wrap_term.h  wrapc.c  wregex.c  wregex.h  (+2 more)
test/: .gitattributes  Makefile  Makefile.am  Makefile.in  run_test.sh  run_tests.sh  test-b-I2  test-dep  test-t1  test.sh  utf8-l77.test  utf8-l78.test  utf8-l79.test  utf8-l80.test  utf8-w77.test  utf8-w78.test  utf8-w79.test  utf8-w80.test  wrap-H3.test  wrap-I2-l72.test  wrap-I2-m1.test  wrap-I2-w72.test  wrap-bI2.test  wrap-d.test  wrap-dep.test  wrap-no_options.test  wrap-t1.test
test/data/: ETB-01.txt  ETB-02.txt  alias-dup.wraprc  alias-no_equal.wraprc  alias-options_exp.wraprc  alias-unclosed_quote.wraprc  alias-unexp_char.wraprc  config.wraprc  data-01.1  data-01.crlf  data-01.doxy  data-01a.txt  data-02.txt  hello.c.crlf  hello.d  hello.hs  hello_00.adb  hello_00.c  hello_00.cpp  hello_00.hs  hello_00.jl  hello_00.pas  hello_00.sim  hello_01.adb  hello_01.c  hello_01.cbl  hello_01.cpp  hello_01.f90  hello_01.fs  hello_01.jl  hello_01.sh  hello_01.sim  hello_02.adb  hello_02.c  hello_02.cbl  hello_02.f90  hello_02.hs  hello_02.jl  hello_02.sh  hello_02.sim  (+272 more)
test/expected/: test-H3.txt  test-I2-m1.txt  test-d.txt  utf8-l77.txt  utf8-w78.txt  utf8-w80.txt  wrap--Markdown-Setext-01.txt  wrap--Markdown-Setext-02.txt  wrap--Markdown-Setext-03.txt  wrap--Markdown-Setext-04.txt  wrap--Markdown-Setext-05.txt  wrap--Markdown-abbr-01.txt  wrap--Markdown-abbr-02.txt  wrap--Markdown-abbr-03.txt  wrap--Markdown-abbr-04.txt  wrap--Markdown-abbr-05.txt  wrap--Markdown-atx-01.txt  wrap--Markdown-atx-02.txt  wrap--Markdown-atx-03.txt  wrap--Markdown-atx-04.txt  wrap--Markdown-code-01.txt  wrap--Markdown-code-02.txt  wrap--Markdown-dl-01s.txt  wrap--Markdown-dl-02s.txt  wrap--Markdown-dl-03s.txt  wrap--Markdown-dl-04s.txt  wrap--Markdown-fence-01a.txt  wrap--Markdown-fence-01b.txt  wrap--Markdown-fence-01c.txt  wrap--Markdown-fence-02a.txt  wrap--Markdown-fence-02b.txt  wrap--Markdown-fence-02c.txt  wrap--Markdown-fence-03a.txt  wrap--Markdown-fence-03b.txt  wrap--Markdown-fence-03c.txt  wrap--Markdown-footnote-01.txt  wrap--Markdown-footnote-02.txt  wrap--Markdown-hr-01b.txt  wrap--Markdown-hr-02c.txt  wrap--Markdown-hr-03a.txt  (+268 more)
test/tests/: ETB-no_options-01.test  ETB-no_options-02.test  README.md  crlf-01.test  crlf-ld-01.test  crlf-li-01.test  crlf-lw-01.test  e-mail.regex  file.regex  ftp.regex  http.regex  utf8-w77.test  utf8-w78.test  utf8-w79.test  utf8-w80.test  wrap--Markdown-Setext-01.test  wrap--Markdown-Setext-02.test  wrap--Markdown-Setext-03.test  wrap--Markdown-Setext-04.test  wrap--Markdown-Setext-05.test  wrap--Markdown-abbr-01.test  wrap--Markdown-abbr-02.test  wrap--Markdown-abbr-03.test  wrap--Markdown-abbr-04.test  wrap--Markdown-abbr-05.test  wrap--Markdown-atx-01.test  wrap--Markdown-atx-02.test  wrap--Markdown-atx-03.test  wrap--Markdown-atx-04.test  wrap--Markdown-code-01.test  wrap--Markdown-code-02.test  wrap--Markdown-dl-01s.test  wrap--Markdown-dl-02s.test  wrap--Markdown-dl-03s.test  wrap--Markdown-fence-01a.test  wrap--Markdown-fence-01b.test  wrap--Markdown-fence-01c.test  wrap--Markdown-fence-02a.test  wrap--Markdown-fence-02b.test  wrap--Markdown-fence-02c.test  (+357 more)
